# mcp-server-newrelic

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md
oneshot/: README.md  build.sh  diagnose_api.py  pyproject.toml  run_server.sh  server  test_api.py
oneshot/src/newrelic_mcp/: __init__.py  client.py  main.py  models.py  server.py
